--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "This is a boilerplate project used for starting new projects!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test",
+    "start": "node server",
+    "dev": "nodemon server",
+    "predeploy": "npm audit",
+    "deploy": "git push heroku master"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/romiaujla/express-boilerplate.git"
   },
   "keywords": [],
+  "engines": {
+    "node": "10.16.0"
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
