--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "express-boilerplate",
+  "name": "bookmarks-app",
   "version": "1.0.0",
   "description": "This is a boilerplate project used for starting new projects!",
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
-    "start": "node server",
-    "dev": "nodemon server",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -29,7 +29,9 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
