--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
-    "start": "node server",
-    "dev": "nodemon server",
+    "start": "node ./src/server",
+    "dev": "nodemon ./src/server",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
